--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,14 @@ project(Sofa.Fenics LANGUAGES CXX)
 set(SOFA_FENICS_SRC "src/sofa/fenics")
 
 find_package(Sofa.Core REQUIRED)
+find_package(SofaPython3 REQUIRED)
+
 
 set(HEADER_FILES
     ${SOFA_FENICS_SRC}/config.h.in
     ${SOFA_FENICS_SRC}/forcefield/HyperElasticForceField.h
     ${SOFA_FENICS_SRC}/forcefield/Material.h
+    ${SOFA_FENICS_SRC}/ufcx.h
 )
 
 set(SOURCE_FILES
@@ -18,7 +21,7 @@ set(SOURCE_FILES
 )
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} PUBLIC Sofa.Core)
+target_link_libraries(${PROJECT_NAME} PUBLIC Sofa.Core SofaPython3::Plugin)
 
 sofa_create_package_with_targets(
     PACKAGE_NAME ${PROJECT_NAME}
